Face Set from Visible crashes Blender #119309

Closed
opened 2024-03-11 04:46:45 +01:00 by kursad k · 2 comments
Member

System Information
Operating system: Win 11
Graphics card: RTX 2070

Blender Version
Broken: 5b522359ee

Short description of error
Trying to create face set from visible geo in the sculpt mode crashes Blender.

image

Exact steps for others to reproduce the error

load the attached file
sculpt mode
activate box hide
hide some areas
face sets -> "Face Sets from Visible"
Crash

# Blender 4.2.0, Commit date: 2024-03-09 22:42, Hash 5b522359ee47
bpy.ops.paint.hide_show(xmin=1399, xmax=1703, ymin=1283, ymax=1650, action='HIDE')  # Operator
bpy.ops.paint.hide_show(xmin=1874, xmax=2372, ymin=980, ymax=1400, action='HIDE')  # Operator
bpy.ops.sculpt.face_sets_create(mode='VISIBLE')  # Operator
bpy.ops.sculpt.face_sets_create(mode='VISIBLE')  # Operator
bpy.ops.sculpt.sculptmode_toggle()  # Operator
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.sculpt.sculptmode_toggle()  # Operator
bpy.ops.sculpt.face_sets_create(mode='SELECTION')  # Operator
Saved "bug_10032024_2240_43.blend"  # Info
bpy.ops.paint.hide_show(xmin=1114, xmax=1495, ymin=1117, ymax=1519, action='HIDE')  # Operator
bpy.ops.paint.hide_show(xmin=1849, xmax=2214, ymin=1136, ymax=1557, action='HIDE')  # Operator

# backtrace
Exception Record:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION
Exception Address     : 0x00007FF6F399A436
Exception Module      : blender.exe
Exception Flags       : 0x00000000
Exception Parameters  : 0x2
	Parameters[0] : 0x0000000000000000
	Parameters[1] : 0x00000000000008BC


Stack trace:
blender.exe         :0x00007FF6F399A3E0  blender::bke::pbvh::node_face_indices_calc_mesh
blender.exe         :0x00007FF6F4608150  <lambda_639c6e78aa5fc5a09e9668e13cfa20a6>::operator()
blender.exe         :0x00007FF6F46068E0  blender::FunctionRef<void __cdecl(blender::IndexRange)>::callback_fn<<lambda_639c6e78aa5fc5a09e9668
blender.exe         :0x00007FF6F3B0F000  tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::int
blender.exe         :0x00007FF6F3B0FE40  tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,<lambda_c9dad93f79b54381876e2f0e63
tbb.dll             :0x00007FFFC10CF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFFC10CF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFFC10C4FD0  tbb::interface7::internal::isolate_within_arena
tbb.dll             :0x00007FFFC10CA120  tbb::task_scheduler_init::terminate
tbb.dll             :0x00007FFFC10CD800  tbb::thread_bound_filter::try_process_item
tbb.dll             :0x00007FFFC10CD800  tbb::thread_bound_filter::try_process_item
ucrtbase.dll        :0x00007FFFD8216BB0  recalloc
KERNEL32.DLL        :0x00007FFFD8A553D0  BaseThreadInitThunk
ntdll.dll           :0x00007FFFDAA24830  RtlUserThreadStart

System Information Operating system: Win 11 Graphics card: RTX 2070 Blender Version Broken: 5b522359ee **Short description of error** Trying to create face set from visible geo in the sculpt mode crashes Blender. ![image](/attachments/ee76bf17-918d-480e-95bd-d9ff78fdf44a) **Exact steps for others to reproduce the error** load the attached file sculpt mode activate box hide hide some areas face sets -> "Face Sets from Visible" Crash ``` # Blender 4.2.0, Commit date: 2024-03-09 22:42, Hash 5b522359ee47 bpy.ops.paint.hide_show(xmin=1399, xmax=1703, ymin=1283, ymax=1650, action='HIDE') # Operator bpy.ops.paint.hide_show(xmin=1874, xmax=2372, ymin=980, ymax=1400, action='HIDE') # Operator bpy.ops.sculpt.face_sets_create(mode='VISIBLE') # Operator bpy.ops.sculpt.face_sets_create(mode='VISIBLE') # Operator bpy.ops.sculpt.sculptmode_toggle() # Operator bpy.ops.object.editmode_toggle() # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.object.editmode_toggle() # Operator bpy.ops.sculpt.sculptmode_toggle() # Operator bpy.ops.sculpt.face_sets_create(mode='SELECTION') # Operator Saved "bug_10032024_2240_43.blend" # Info bpy.ops.paint.hide_show(xmin=1114, xmax=1495, ymin=1117, ymax=1519, action='HIDE') # Operator bpy.ops.paint.hide_show(xmin=1849, xmax=2214, ymin=1136, ymax=1557, action='HIDE') # Operator # backtrace Exception Record: ExceptionCode : EXCEPTION_ACCESS_VIOLATION Exception Address : 0x00007FF6F399A436 Exception Module : blender.exe Exception Flags : 0x00000000 Exception Parameters : 0x2 Parameters[0] : 0x0000000000000000 Parameters[1] : 0x00000000000008BC Stack trace: blender.exe :0x00007FF6F399A3E0 blender::bke::pbvh::node_face_indices_calc_mesh blender.exe :0x00007FF6F4608150 <lambda_639c6e78aa5fc5a09e9668e13cfa20a6>::operator() blender.exe :0x00007FF6F46068E0 blender::FunctionRef<void __cdecl(blender::IndexRange)>::callback_fn<<lambda_639c6e78aa5fc5a09e9668 blender.exe :0x00007FF6F3B0F000 tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::int blender.exe :0x00007FF6F3B0FE40 tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,<lambda_c9dad93f79b54381876e2f0e63 tbb.dll :0x00007FFFC10CF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFFC10CF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFFC10C4FD0 tbb::interface7::internal::isolate_within_arena tbb.dll :0x00007FFFC10CA120 tbb::task_scheduler_init::terminate tbb.dll :0x00007FFFC10CD800 tbb::thread_bound_filter::try_process_item tbb.dll :0x00007FFFC10CD800 tbb::thread_bound_filter::try_process_item ucrtbase.dll :0x00007FFFD8216BB0 recalloc KERNEL32.DLL :0x00007FFFD8A553D0 BaseThreadInitThunk ntdll.dll :0x00007FFFDAA24830 RtlUserThreadStart ```
kursad k added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-11 04:46:46 +01:00
kursad k changed title from mface set from visible crashes Blender to Face Set from Visible crashes Blender 2024-03-11 04:47:28 +01:00
Member

Thanks for the report. Can confirm the crash/regression

Thanks for the report. Can confirm the crash/regression
Pratik Borhade self-assigned this 2024-03-11 06:15:59 +01:00
Member
https://projects.blender.org/blender/blender/pulls/119311
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-11 13:01:31 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-11 13:02:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119309
No description provided.