Fix #119309: Face Set from Visible crash with multires

Fix is same as 18912561b5 / 72d324bd81

Pull Request: https://projects.blender.org/blender/blender/pulls/119311